// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CumulativeInventoryChartLegend /> should render correctly 1`] = `
<Fragment>
  <ChartLegendItem
    color="#5A288F"
    label="Revenue"
  />
</Fragment>
`;

exports[`<CumulativeInventoryChartLegend /> should render correctly when projections are present 1`] = `
<Fragment>
  <ChartLegendItem
    color="#5A288F"
    label="Actual Revenue"
  />
  <ChartLegendItem
    color="#817CB8"
    dashed={true}
    label="Projected Inventory"
  />
</Fragment>
`;
